add a basic form in body

--- a/templates.html/index.html
+++ b/templates.html/index.html
@@ -5,4 +5,14 @@
 
         <title>Friendship Bracelets</title>
     </head>
+
+    <body>
+        <form action="/design">
+            <input type="color" id="color1" name="color1">
+
+            <input type="color" id="color2" name="color2">
+
+            <input type="color" id="color3" name="color3">
+        </form>
+    </body>
 </html>
