align content in the center

--- a/templates.html/index.html
+++ b/templates.html/index.html
@@ -6,7 +6,7 @@
         <title>Friendship Bracelets</title>
     </head>
 
-    <body>
+    <body align="center">
 
         <form action="/design">
             <input type="color" id="color1" name="color1">
@@ -15,6 +15,6 @@
 
             <input type="color" id="color3" name="color3">
         </form>
-        
+
     </body>
 </html>
