add a title for the form

--- a/templates.html/index.html
+++ b/templates.html/index.html
@@ -8,6 +8,8 @@
 
     <body align="center">
 
+        <h3>Choose 3 Colors:</h3>
+
         <form action="/design">
             <input type="color" id="color1" name="color1">
 
